fixed panel spacing and footer

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,9 +2,8 @@ html,
 body,
 #google_canvas {
   height:100%;
-  color: blue;
-  background-color: lightgray;
 }
+
 #google_canvas h1 {
   font-size:16px;
 }
@@ -28,18 +27,16 @@ body,
 }
 body {
   font:400 20px/1.4 'Arial', Helvetica, sans-serif;
-  background: #fff;
+  /*background: #000;*/
+}
+
+.panel-success {
+  margin: 20px 0px 20px 0px;
 }
 
 .wrapper {
   max-width:1280px;
   margin:0 auto;
-}
-
-.jumbotron {
-    <img src="images/sandwich.jpg", background-image: cover>
-
-    overflow: hidden;
 }
 
 .header {
@@ -49,11 +46,17 @@ body {
   border-left:5px solid #2BA6CB;
   overflow:hidden;
 }
+
+.footer {
+  padding: 10px 0 10px 0;
+  margin: 10px 0 0 0;
+  overflow: hidden;
+}
+
 /*.logo {
   float:left;
 }*/
 
-<br>
 .nav {
   float:right;
   margin:12px 0;
